--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -e js -r dotenv/config ./src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "william-hill": "node ./src/services/scrapers/william_hill.js",
+    "betclic": "node ./src/services/scrapers/betclic.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.13.0",
