--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -e js -r dotenv/config ./src/index.js",
     "start": "node ./src/index.js",
-    "william-hill": "node ./src/services/scrapers/william_hill.js",
-    "betclic": "node ./src/services/scrapers/betclic.js"
+    "starcasino": "node ./src/services/scrapers/star_casino.js"
   },
   "repository": {
     "type": "git",
