--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -e js -r dotenv/config ./src/index.js",
-    "start": "node ./src/index.js",
-    "starcasino": "node ./src/services/scrapers/star_casino.js"
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
