--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -e js -r dotenv/config ./src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "planetwin": "node ./src/services/scrapers/planetwin365.js"
   },
   "repository": {
     "type": "git",
