--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -e js -r dotenv/config ./src/index.js",
     "start": "node ./src/index.js",
-    "planetwin": "node ./src/services/scrapers/planetwin365.js"
+    "oddschecker": "node ./src/services/scrapers/oddschecker.js"
   },
   "repository": {
     "type": "git",
